--- a/resources/scss/bootstrap.scss
+++ b/resources/scss/bootstrap.scss
@@ -9,10 +9,10 @@ File: Custom Bootstrap Css File
 
 
 //Core files
-@import "node_modules/bootstrap/scss/functions";
-@import "node_modules/bootstrap/scss/variables";
+@import "../../node_modules/bootstrap/scss/functions";
+@import "../../node_modules/bootstrap/scss/variables";
 @import "variables";
 @import "variables-dark";
 @import "components/utilities";
-@import "node_modules/bootstrap/scss/bootstrap";
+@import "../../node_modules/bootstrap/scss/bootstrap";
 
