--- a/resources/scss/pages/_landing.scss
+++ b/resources/scss/pages/_landing.scss
@@ -34,7 +34,7 @@
         position: absolute;
         width: 24px;
         height: 24px;
-        background-color: rgba($success, 0.2);
+        background-color: rgba(#37bae2, 0.2);
         border-radius: 50%;
         bottom: 0;
         left: 0;
@@ -87,7 +87,7 @@
         .card-logo-dark {
             display: none;
         }
-    
+
         .card-logo-light {
             display: block;
         }
@@ -111,7 +111,7 @@
             .card-logo-dark {
                 display: block;
             }
-        
+
             .card-logo-light {
                 display: none;
             }
@@ -252,12 +252,12 @@
 
     //navbar-light
     .navbar-light{
-        &.is-sticky { 
+        &.is-sticky {
             .navbar-brand {
                 .card-logo-dark {
                     display: none;
                 }
-        
+
                 .card-logo-light {
                     display: block;
                 }
