fix landing scss

--- a/resources/scss/pages/_landing.scss
+++ b/resources/scss/pages/_landing.scss
@@ -69,7 +69,7 @@
                 &:hover,
                 &.active,
                 &:focus {
-                    color: $success !important;
+                    color: rgb(56, 187, 229) !important;
                 }
             }
         }
